[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
prost = { version = "0.11" }
axum = { version = "0.6" }
axum-extra = { version = "0.4", features = ["protobuf"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1.0" }

[build-dependencies]
prost-build = { version = "0.11.6" }